# DEFCON

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
docs/: SCOPE.md  index.html
notebooks/: demo.ipynb
scripts/: _boost_worker.py  aggregate_credits.py  analysis_figures.py  compute_credits.py  compute_epv.py  download_metrica.py  download_pff.py  download_wyscout.py  fetch_pff_drive.py  make_tables.py  pff_demo.py  process_match.py  process_pff.py  run_baselines.py  train_components.py  train_components_pff.py  train_pass_success.py  train_uxg.py
src/defcon/: __init__.py  config.py
src/defcon/credit/: aggregate.py  engine.py  rules.py
src/defcon/data/: cache.py  kinematics.py  labels.py  metrica.py  pff.py  pff_events.py  pipeline.py  receiver.py  sync.py  wyscout.py
src/defcon/epv/: epv.py
src/defcon/eval/: baselines.py  market_value.py  tables.py
src/defcon/features/: dataset.py  geometry.py  graph.py  nodes.py  state.py
src/defcon/models/: gat.py  train.py  uxg.py
src/defcon/viz/: credit.py  pitch.py  spatial.py  timeline.py
tests/: test_aggregate.py  test_cache.py  test_config.py  test_credit_engine.py  test_credit_rules.py  test_epv.py  test_gat.py  test_graph.py  test_kinematics_sync.py  test_labels_receiver.py  test_market_value.py  test_metrica.py  test_node_features.py  test_pff.py  test_pff_events.py  test_shot_blocking.py  test_spatial_viz.py  test_train_components.py  test_uxg.py
tests/data/pff/: 9001.jsonl  metadata_9001.json  rosters_9001.json
