[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defcon"
version = "0.1.0"
description = "Unofficial reproduction of 'Better Prevent than Tackle: Valuing Defense in Soccer Based on Graph Neural Networks' (Kim et al.)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arnav Mahadev" }]

# Core dependencies — enough for Phase 0 setup, the data pipeline, and the
# UxG logistic-regression model (Milestone M1). Deliberately excludes torch so
# early phases install fast and portably. Install the GNN stack via the
# `[gnn]` extra when you reach Phase 2.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# Graph neural network stack (Phase 2+). torch-geometric wheels can lag new
# Python releases, hence the pinned-but-flexible ranges and the separate extra.
gnn = [
    "torch>=2.1",
    "torch-geometric>=2.4",
]
# Gradient-boosting baselines (Phase 7).
boost = [
    "xgboost>=2.0",
    "catboost>=1.2",
]
# Visualization (Phase 8).
viz = [
    "plotly>=5.18",
    "matplotlib>=3.7",
    "kaleido>=0.2",
]
# Development tooling.
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter/soft limit
